--- a/index.ipynb
+++ b/index.ipynb
@@ -397,12 +397,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'PyeongChang'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cities[11]['City'] = 'PyeongChang' # 'PyeongChang'\n",
-    "cities"
+    "cities[11]['City']"
    ]
   },
   {
